<?xml version="1.0"?>
<package>
  <name>gencpp_subsystem_buffers</name>
  <version>0.5.5</version>
  <description>Agent subsystem buffers generator based on
    C++ ROS message and service generators.</description>
  <maintainer email="dawid.seredynski@gmail.com">dseredyn</maintainer>
  <license>BSD</license>

  <author>Josh Faust</author>
  <author>Troy Straszheim</author>
  <author>Morgen Kjaergaard</author>
  <author>Dawid Seredynski</author>

  <buildtool_depend version_gte="0.5.78">catkin</buildtool_depend>

  <build_depend>genmsg</build_depend>

  <run_depend>genmsg</run_depend>

  <export>
    <message_generator>cpp</message_generator>
    <rosdoc config="rosdoc.yaml"/>
    <architecture_independent/>
  </export>
</package>
